<resources>
  <string name="app_name">Rock Dog</string>
  <string name="shuffle">Shuffle</string>
  <string name="favorite">Favorite</string>
  <string name="playlists">Playlists</string>
  <string name="song_cover">Song cover</string>
  <string name="create_playlist">Create playlist</string>
  <string name="go_back">Go back</string>
  <string name="account">Account</string>
  <string name="settings">Settings</string>
  <string name="about">About</string>
  <string name="exit">Exit</string>
  <string name="artists_profile">Artists profile</string>
  <string name="total_songs">Total songs: %1$d</string>
  <string name="tracks">Tracks: %1$d</string>
  <string name="two_artists">%1$s &amp;&amp; %2$s></string>
  <string name="more_artists">%1$, %2$s &amp;&amp; %3$d other artists></string>
  <string name="welcomeText">To work with the service you need to log in.</string>
  <string name="login">Log In</string>
  <string name="register">Sign Up</string>
  <string name="app_name_part_left">Rock</string>
  <string name="app_name_part_right">Dog</string>
  <string name="tagline"><![CDATA[Anywhere for Everyone!]]></string>
  <string name="email">Email</string>
  <string name="userName">User name</string>
  <string name="password">Password</string>
  <string name="password_repeat">Password repeat</string>
  <string name="forgot_your_password">Forgot your password?</string>
  <string name="unknownError">Unknown error</string>
  <string name="no_unique">No unique</string>
  <string name="value_short">Value is short</string>
  <string name="is_require">Is require</string>
  <string name="password_repeat_no_equal">Password and repeat aren`t equal</string>
  <string name="is_not_email">Isn`t email</string>
  <string name="networkError">Network error. Check your network connection</string>
  <string name="error_dialog_title">Oops...</string>
  <string name="ok">OK</string>
  <string name="invalidCredentials">Invalid credentials</string>
  <string name="no_verified_email">The email is not confirmed! An email with information has been sent to your email account (the email may be in your spam folder)</string>
  <string name="reset_password_dialog_title">Reset password</string>
  <string name="reset_password_description">To regain access, enter the email address your account was registered to. An email with further instructions will be sent to this email address</string>
  <string name="settings_title">Settings</string>
  <string name="pop">Pop</string>
  <string name="rock">Rock</string>
  <string name="hip_hop">Hip hop</string>
  <string name="country">Country</string>
  <string name="RnB">R`n`b</string>
  <string name="heavy_metal">Heavy metal</string>
  <string name="blues">Blues</string>
  <string name="electronic">Electronic</string>
  <string name="classical_music">Classical</string>
  <string name="dance">Dance</string>
  <string name="folk">Folk</string>
  <string name="reggae">Reggae</string>
  <string name="alternative_rock">Alternative rock</string>
  <string name="punk_rock">Punk rock</string>
  <string name="indie_rock">Indie rock</string>
  <string name="funk">Funk</string>
  <string name="latin">Latin music</string>
  <string name="techno">Techno</string>
  <string name="easy_listening">Easy listening</string>
  <string name="dubstep">Dubstep</string>
  <string name="pop_rock">Pop rock</string>
  <string name="rapping">Rapping</string>
  <string name="instrumental">Instrumental</string>
  <string name="create_request_to_registration_artist">Create request to registration artist</string>
  <string name="genres">Genres</string>
  <string name="alias">Alias</string>
  <string name="description">Description</string>
  <string name="genres_description">Select several genres of music in which you want to release music</string>
  <string name="save">Save</string>
  <string name="request_to_registration_artist">Request to registration artist</string>
  <string name="after_send_request_to_registration_artis">Your artist registration request has been sent. The service administrator will review your request.</string>
  <string name="admin_panel">Admin panel</string>
  <string name="add_admin">Add admin</string>
  <string name="administrators">Administrators</string>
  <string name="users">Users</string>
  <string name="requests_to_registration_artist">Requests to registration artist</string>
  <string name="welcome_text">Hi, %1$s</string>
  <string name="your_admin_level">You are a level %1$d administrator</string>
  <string name="progressive_rock">Progressive rock</string>
  <string name="no_requests_were_found">No requests were found</string>
  <string name="no_photos_were_found">No photos were found</string>
  <string name="deny">Deny</string>
  <string name="approve">Approve</string>
  <string name="notifications">Notifications</string>

  <string name="approve_to_registration_artist_desc">Congratulations! Your registration request for the artist "%1$s" has been approved. You can now fill in more information about the artist or add works. But remember, "With great power comes great responsibility.</string>
  <string name="approved_to_reg_artist_header">Approved to registration artist</string>

  <string name="denied_to_registration_artist_desc">Your registration request for the artist "%1$s" has been denied</string>
  <string name="denied_to_reg_artist_header">Denied to registration artist</string>
  <string name="artist">Artist</string>
  <string name="albums">Albums</string>
  <string name="social_media">Social media</string>
  <string name="add_photo">Add photo</string>
  <string name="from_to">%1$d/%2$d</string>
  <string name="delete">Delete</string>
  <string name="download">Download</string>
  <string name="photos">Photos</string>
  <string name="band_members">Band members</string>
  <string name="add_band_member">Add band member</string>
  <string name="add_album">Add album</string>
  <string name="add_social_media">Add social media</string>
  <string name="change_description">Change description</string>
  <string name="band_member_name">Band member name</string>
  <string name="band_member_description">Description</string>
</resources>