<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_marginHorizontal="25dp"
  android:background="@drawable/bg_dialog"
  android:gravity="center"
  android:orientation="vertical">

  <TextView
    style="@style/text.header2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:text="@string/reset_password_dialog_title"
    android:textStyle="bold" />


  <TextView
    android:id="@+id/textMessage"
    style="@style/text"
    android:layout_marginTop="10dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:text="@string/reset_password_description"
    />

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/fieldEmail"
    style="@style/FieldWrapper.contrast"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/email"
    app:errorEnabled="false"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="15dp"
    app:startIconDrawable="@drawable/ic_email">

    <com.google.android.material.textfield.TextInputEditText
      style="@style/FieldContent.contrast"
      android:id="@+id/textViewEmail"
      android:autofillHints="emailAddress"
      android:imeOptions="actionNext"
      android:inputType="textEmailAddress"
      android:text="@={viewModel.email}" />
  </com.google.android.material.textfield.TextInputLayout>


  <View
    android:layout_width="match_parent"
    android:layout_height="0.1dp"
    android:background="@color/grey_light" />


  <TextView
    android:id="@+id/buttonOk"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    style="@style/text.clickable"
    android:padding="15dp"
    android:text="@string/ok" />

</LinearLayout>