<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="master"
      type="el.ka.rockdog.view.ui.auth.LogInFragment" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/imageBg"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      android:src="@drawable/bg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#DA333333"
      app:layout_constraintBottom_toBottomOf="@id/imageBg"
      app:layout_constraintEnd_toEndOf="@id/imageBg"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@id/imageBg"
      app:layout_constraintTop_toTopOf="@id/imageBg"
      app:layout_constraintVertical_bias="0.0" />

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="@id/imageBg"
      app:layout_constraintEnd_toEndOf="@id/imageBg"
      app:layout_constraintStart_toStartOf="@id/imageBg" />

    <LinearLayout
      android:id="@+id/layoutAppTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:layout_marginTop="100dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        style="@style/text.big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/app_name_part_left"
        android:textColor="@color/accent_color" />

      <TextView
        style="@style/text.big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_part_right"
        android:textColor="@color/white" />
    </LinearLayout>


    <TextView
      android:id="@+id/textSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/nothing_you_could_do_regular"
      android:text="@string/tagline"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layoutAppTitle" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@id/buttonLogin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textSubtitle">

      <com.google.android.material.textfield.TextInputLayout
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:autofillHints="emailAddress"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:hint="@string/password"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="textPassword" />
      </com.google.android.material.textfield.TextInputLayout>

      <TextView
        style="@style/text.contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:gravity="end"
        android:onClick="@{() -> master.forgetPassword()}"
        android:text="@string/forgot_your_password"
        />

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonLogin"
      style="@style/button.fill"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:layout_marginBottom="20dp"
      android:onClick="@{() -> master.logIn()}"
      android:text="@string/login"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
