<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="viewModel"
      type="el.ka.rockdog.viewModel.SignUpViewModel" />

    <variable
      name="master"
      type="el.ka.rockdog.view.ui.auth.SignUpFragment" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/imageBg"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      android:src="@drawable/bg"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />


    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#DA333333"
      app:layout_constraintBottom_toBottomOf="@id/imageBg"
      app:layout_constraintEnd_toEndOf="@id/imageBg"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="@id/imageBg"
      app:layout_constraintTop_toTopOf="@id/imageBg"
      app:layout_constraintVertical_bias="0.0" />

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintBottom_toBottomOf="@id/imageBg"
      app:layout_constraintEnd_toEndOf="@id/imageBg"
      app:layout_constraintStart_toStartOf="@id/imageBg" />

    <LinearLayout
      android:id="@+id/layoutAppTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:layout_marginTop="100dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        style="@style/text.big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/app_name_part_left"
        android:textColor="@color/accent_color" />

      <TextView
        style="@style/text.big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name_part_right"
        android:textColor="@color/white" />
    </LinearLayout>


    <TextView
      android:id="@+id/textSubtitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/nothing_you_could_do_regular"
      android:text="@string/tagline"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layoutAppTitle" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:orientation="vertical"
      app:layout_constraintBottom_toTopOf="@id/buttonRegistration"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/textSubtitle">

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldEmail"
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:startIconDrawable="@drawable/ic_email">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="textEmailAddress"
          android:text="@={viewModel.email}" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldUserName"
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"
        app:startIconDrawable="@drawable/ic_user">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="text"
          android:text="@={viewModel.userName}" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldPassword"
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/on_second_color"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="textPassword"
          android:text="@={viewModel.password}" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        style="@style/FieldWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_repeat"
        app:passwordToggleEnabled="true"
        app:errorIconDrawable="@null"
        app:passwordToggleTint="@color/on_second_color"
        app:startIconDrawable="@drawable/ic_lock">

        <com.google.android.material.textfield.TextInputEditText
          style="@style/FieldContent"
          android:imeOptions="actionNext"
          android:inputType="textPassword"
          android:text="@={viewModel.passwordRepeat}" />
      </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
      android:id="@+id/buttonRegistration"
      style="@style/button.outline"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:layout_marginBottom="20dp"
      android:onClick="@{() -> master.signUp()}"
      android:text="@string/register"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
