<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">

  <data>

    <variable
      name="master"
      type="el.ka.rockdog.view.ui.WelcomeFragment" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
      android:id="@+id/imageBg"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:scaleType="centerCrop"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:src="@drawable/bg"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintBottom_toBottomOf="parent" />


    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:background="#B7333333"
      app:layout_constraintTop_toTopOf="@id/imageBg"
      app:layout_constraintBottom_toBottomOf="@id/imageBg"
      app:layout_constraintEnd_toEndOf="@id/imageBg"
      app:layout_constraintStart_toStartOf="@id/imageBg" />

    <View
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:layout_constraintTop_toBottomOf="@id/divider"
      app:layout_constraintBottom_toBottomOf="@id/imageBg"
      app:layout_constraintEnd_toEndOf="@id/imageBg"
      app:layout_constraintStart_toStartOf="@id/imageBg" />

    <LinearLayout
      android:id="@+id/layoutAppTitle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="@dimen/app_padding"
      android:layout_marginTop="100dp"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

      <TextView
        style="@style/text.big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_extra_bold"
        android:text="@string/app_name_part_left"
        android:textColor="@color/accent_color" />

      <TextView
        style="@style/text.big"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:text="@string/app_name_part_right" />
    </LinearLayout>


    <TextView
      android:id="@+id/textSubtitle"
      android:layout_width="wrap_content"
      android:textColor="@color/white"
      android:fontFamily="@font/nothing_you_could_do_regular"
      android:layout_height="wrap_content"
      android:text="@string/tagline"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/layoutAppTitle" />

    <TextView
      android:id="@+id/text"
      style="@style/text.header2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:layout_marginStart="@dimen/app_padding"
      android:layout_marginEnd="@dimen/app_padding"
      android:layout_marginBottom="20dp"
      android:fontFamily="@font/nothing_you_could_do_regular"
      android:gravity="center"
      android:text="@string/welcomeText"
      app:layout_constraintBottom_toTopOf="@id/buttonLogin"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

<!--    android:background="#EE292929"-->

    <View
      android:id="@+id/divider"
      android:layout_width="match_parent"
      android:layout_height="3dp"
      android:layout_marginBottom="15dp"
      app:layout_constraintBottom_toTopOf="@id/text" />

<!--    android:background="#AD333333"-->

    <Button
      android:id="@+id/buttonLogin"
      style="@style/button.fill"
      android:layout_marginHorizontal="30dp"
      android:layout_marginBottom="10dp"
      android:onClick="@{() -> master.goLogIn()}"
      android:text="@string/login"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toTopOf="@id/buttonRegistration"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

    <Button
      android:id="@+id/buttonRegistration"
      style="@style/button.outline"
      android:layout_marginHorizontal="30dp"
      android:layout_marginBottom="20dp"
      android:onClick="@{() -> master.goSignUp()}"
      android:text="@string/register"
      app:backgroundTint="@null"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>