<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="imageUrl"
      type="String" />
  </data>

  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:paddingHorizontal="@dimen/app_padding"
      android:paddingVertical="35dp">

      <TextView
        style="@style/text.header2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/add_band_member" />

      <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageBandMember"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        app:imageUrl="@{imageUrl}"
        tools:src="@drawable/example" />

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldName"
        style="@style/FieldWrapper.contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:hint="@string/band_member_name"
        app:counterEnabled="true"
        app:counterMaxLength="36"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textViewName"
          style="@style/FieldContent.contrast"
          android:inputType="textPersonName"
          android:maxLength="36" />
      </com.google.android.material.textfield.TextInputLayout>

      <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fieldDescription"
        style="@style/FieldWrapper.contrast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/band_member_description"
        app:counterEnabled="true"
        app:counterMaxLength="36"
        app:errorEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/textViewDescription"
          style="@style/FieldContent.contrast"
          android:inputType="textPersonName"
          android:maxLength="36" />
      </com.google.android.material.textfield.TextInputLayout>


      <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupGenres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:singleSelection="false" />

      <TextView
        android:id="@+id/buttonOk"
        style="@style/text.clickable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:paddingHorizontal="15dp"
        android:paddingTop="15dp"
        android:text="@string/save"

        android:textSize="16sp" />
    </LinearLayout>
  </androidx.core.widget.NestedScrollView>
</layout>